name:                api-hask
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/api-hask#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                      , safe
                      , wreq
                      , array
                      , text                      
                      , MissingH
                      
  default-language:    Haskell2010

executable api-hask-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base  >= 4.7 && < 5
                     , safe
                     , api-hask                     
                     , wreq                                        
                     , aeson
                     , lens
                     -- , lens-aeson
                     -- , time
                     --, async
                     , scalpel
                     , tagsoup                                          
                     , bytestring
  default-language:    Haskell2010

test-suite api-hask-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , api-hask
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N  -fno-warn-tabs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/api-hask
